--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>title</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
   </head>
-  <body>
+  <body style="background-color:darkslategrey; color:burlywood">
   <a href="/games">Games</a>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript">
