--- a/public/logs.html
+++ b/public/logs.html
@@ -8,22 +8,21 @@
 </head>
 <body style="background-color:darkslategrey; color:burlywood">
     <section style="background-color:grey;">
-        <a href="/games.html">Games</a>
-        <div>
-            <form method="get" action="/speak">
-                <label>What to say:</label><input name="say" type="text"/>
-                <label>Channel ID:</label><input name="channelid" type="number"/>
-                <input type="submit" value="Make idiotchess bot speak"/>
-            </form>
+        <input id="refresh" type="button" value="Refresh" />       
+        <div id="logsholder">
         </div>
-        <a href="/logs.html">Logs</a>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/1.3.0/json2html.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         function autorun() {
+            $.get("/logsdata", function (data) {
+                $("#logsholder")[0].insertAdjacentHTML("beforeend", "<textarea>" + data+"</textarea>");
 
+            });
         }
+
         if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
         else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
         else window.onload = autorun;
