--- a/public/logs.html
+++ b/public/logs.html
@@ -9,7 +9,7 @@
 <body style="background-color:darkslategrey; color:burlywood">
     <section style="background-color:grey;">
         <input id="refresh" type="button" value="Refresh" />       
-        <div id="logsholder">
+        <div id="logsholder" style="width: 100%; height: 100%;">
         </div>
     </section>
 
