--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div>
             <form method="get" action="/speak">
                 <label>What to say:</label><input name="say" type="text"/>
-                <label>Channel ID:</label><input name="channelid" type="number"/>
+                <label>Channel ID:</label><input name="channelid" type="text"/>
                 <input type="submit" value="Make idiotchess bot speak"/>
             </form>
         </div>
