--- a/public/games.html
+++ b/public/games.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>title</title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
 </head>
 <body style="background-color:darkslategrey; color:burlywood">
     <section style="background-color:grey;">
@@ -17,10 +17,17 @@
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.json2html/1.2.0/jquery.json2html.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/1.3.0/json2html.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var code;
         function autorun() {
-            $.get("/gamesdata", function (data) {
+
+            var url = new URL(window.location.href);
+            code = url.searchParams.get("code");
+            //document.getElementById('code').value = code;
+        
+
+            $.get("/gamesdata?code="+ code, function (data) {
                 let transform = {
                     '<>': 'li', 'html': [{
                         '<>': 'span', 'html': [{ '<>': 'span', 'html': [{ '<>': 'span', 'html': [{'<>': 'span'}]}] }] 
@@ -69,7 +76,7 @@
                 let jsonobj = JSON.parse(data);
                 $("#gamesholder")[0].insertAdjacentHTML("beforeend", "<p>" + toHtml(jsonobj));
 
-            });
+            });            
         }
 
         if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
