--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>title</title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
 </head>
 <body style="background-color:darkslategrey; color:burlywood">
     <section style="background-color:grey;">
-        <a href="/games.html">Games</a>
+        <a name='code' href="/games.html">Games</a>
         <div>
             <form method="get" action="/speak">
+                <input id='code' type="hidden" name="code"></code>
                 <label>What to say:</label><input name="say" type="text"/>
                 <label>Channel ID:</label><input name="channelid" type="text"/>
                 <input type="submit" value="Make idiotchess bot speak"/>
             </form>
         </div>
-        <a href="/logs.html">Logs</a>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+        <a name='code' href="/logs.html">Logs</a>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     </section>
 
     <script type="text/javascript">
+        var code;
         function autorun() {
-
-        }
+            var url = new URL(window.location.href);
+            code = url.searchParams.get("code");
+            //getElementById('code').value = code;
+            for (var i = 0, els = document.getElementsByName('code'); i < els.length; i++) {
+                if (typeof els[i].value !== 'undefined') {
+                    els[i].value = code;
+                }
+                if (typeof els[i].href !== 'undefined') {
+                    els[i].href += '?code=' + code;
+                }
+            }
+        }        
         if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
         else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
         else window.onload = autorun;
