--- a/public/logs.html
+++ b/public/logs.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>title</title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
 </head>
 <body style="background-color:darkslategrey; color:burlywood">
     <section style="background-color:grey;">
-        <input id="refresh" type="button" value="Refresh" />       
-        <div id="logsholder" style="width: 100%; height: 100%;">
+        <!-- <input id="refresh" type="button" value="Refresh" />        -->
+        <div id="logsholder">
         </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/1.3.0/json2html.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var code;
         function autorun() {
-            $.get("/logsdata", function (data) {
-                $("#logsholder")[0].insertAdjacentHTML("beforeend", "<textarea>" + data+"</textarea>");
 
+            var url = new URL(window.location.href);
+            code = url.searchParams.get("code");
+
+            $.get("/logsdata?code=" + code, function (data) {
+                $("#logsholder")[0].insertAdjacentHTML("beforeend", "<textarea  style='width: 100%; height: 100%; box-sizing: border-box;'>" + data+"</textarea>");
             });
         }
 
